--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,15 +15,16 @@
 
 
 
-<form action="/tryLogin" method="POST">
+<form action="/tryLogin" method="POST" id="form">
 
-<p>Nome: <input type="text" name="nome" class="campoLogin campo" onChange="check()"></p>
+<p>Email: <input type="text" name="login" class="campoLogin campo" onChange="checkName();"></p>
 <p class="criticaLogin critica"></p>
-<p>Senha: <input type="text" name="senha" class="campoSenha campo"></p>
+<p>Senha: <input type="text" name="senha" class="campoSenha campo" onChange=""></p>
+<p class="linhaNome">Nome: <input type="text" name="nome" class="campoNome campo"></p>
+<p class="linhaSexo">Sexo: <input type="text" name="sexo" class="campoSexo campo"></p>
+
 <p class="criticaSenha critica"></p>
-
 <%- include("includes/flash") %>
-
 
 
 <input type="text" id="csrf" name="_csrf" value="<%= csrfToken %>" hidden>
@@ -32,6 +33,8 @@
 </center>
 
 <script src="entradaAjax.js">
+</script>
+<script src="entradaBasico.js">
 </script>
 
 </body>
